2006-01-28  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	More robust handling when doing basic search.  Should fix #328464

2006-01-28  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (create_toc_from_index):
	Don't call g_dir_close() unless we successfully opened the dir;
	Also, skip adding a directory to the man page TOC if we can't stat()
	it, fixes #328953

2006-01-26  Brent Smith  <gnome@nextreality.net>

	* README:
	updated the README to reflect the requirement on gnome-doc-utils 0.5.2
	bumped scrollkeeper version to 0.3.14

2006-01-26  Brent Smith  <gnome@nextreality.net>

	* src/yelp-settings.c:
	Use the /desktop/gnome/interface/document_font_name gconf key
	for the default font, instead of font_name

2006-01-25  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-print.c: 
	* src/yelp-toc-pager.c: 
	Patch from Jens Granseuer to fix some C99 initialisations
	bug #328261
	
	* src/yelp-main.c: 
	Fix crash on opening 2nd instance, #328517

2006-01-24  Brent Smith  <gnome@nextreality.net>

	* src/yelp-window.c: (window_dispose), (window_disconnect):
	fixed a critical warning which is triggered when a document
	open fails, and then the user quits yelp

2006-01-23  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c: 
	Set initial focus to html widget, fixes #324190

	* src/yelp-search-pager.c: 
	* configure.in: 
	Make compilation with Beagle search with newer Beagle
	Bump minimum Beagle version to 0.2.0
	
2006-01-22  Brent Smith  <gnome@nextreality.net>

	* src/yelp-gecko-utils.cpp:
	* src/yelp-settings.c: (yelp_settings_get_font):
	Added more robust error handling for gconf related
	issues, fixes #327826

2006-01-22  Brent Smith  <gnome@nextreality.net>

	* yelp.desktop.in.in:
	Add "GTK" to the categories in the .desktop file; fixes
	#328045

2006-01-21  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-io-channel.c: 
	* src/yelp-info-parser.c: 
	Look for multi-part info files in INFOPATH