@@ -1,3 +1,8 @@
+2006-01-29  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-toc-pager.c: 
+	Fix some memory leaks
+	
 2006-01-28  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-search-pager.c: 
